# roll

./: .gitignore  README.md  pyproject.toml
config/: env.example  settings.example.yaml  settings.live.example.yaml  settings.live.minimal-funds.example.yaml  settings.testnet.example.yaml  settings.testnet.minimal-funds.example.yaml  settings.yaml
config/secrets/: live.env.example  testnet.env.example
data/: roll_state.json
deploy/systemd/: README.md  roll-live.service  roll-testnet.service
docs/: cloud-server-live-deployment.md  live-go-live-acceptance.md  plan设计与代码缺口对照表.md  滚仓系统实现的plan文档.md  滚仓系统实现的plan文档2.0版本.md  滚仓系统实现的plan文档3.0版本.md
docs/checklists/: live-go-live-checklist.md
docs/templates/: live-acceptance-record.template.md
scripts/acceptance/: README.md  _common.sh  collect-session.sh  phase1-testnet-closed-loop.sh  phase2-live-dry-run-check.sh  phase2-live-dry-run-start.sh  phase3-live-reconcile.sh  phase4-live-first-signed-once.sh  phase5-live-systemd-start.sh  preflight.sh
scripts/deploy/: README.md  _common.sh  bootstrap-ubuntu.sh  install-systemd.sh
src/: main.py
src/roll.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: test_acceptance_scripts.py  test_account_modes.py  test_backtest.py  test_binance_client.py  test_binance_config.py  test_p2_strategy.py  test_p3_engineering.py  test_position_manager.py  test_position_roll.py  test_position_roll_leverage.py  test_process_lock.py  test_risk.py  test_secrets.py  test_signed_guard.py  test_strategy_loop.py  test_symbol_filter.py  test_trend_model.py  test_usdm_account.py  test_usdm_auto_trade.py
(+24 files in other folders)
