[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roll"
version = "0.1.0"
description = "Binance COIN-M Futures 滚仓交易系统（骨架阶段）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
roll = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["roll"]
py-modules = ["main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
